# postmodern-python

./: LICENSE  README.md  pyproject.toml
src/postmodern_python/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
