[tool.poetry]
name = "postmodern_python"
version = "0.1.0"
description = ""
authors = ["Ian M <ian@telem.us>"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/iancharles/postmodern-python"
repository = "https://github.com/iancharles/postmodern-python"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
postmodern_python = "postmodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
