[tool.poetry]
name = "postmodern_python"
version = "0.1.0"
description = ""
authors = ["Ian M <ian@telem.us>"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/iancharles/postmodern-python"
repository = "https://github.com/iancharles/postmodern-python"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
coverage = {extras = ["toml"], version = "^5.2.1"}

[tool.poetry.scripts]
postmodern_python = "postmodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["postmodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
